--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   pie_chart: ^5.0.0
   country_picker: ^1.0.4
+  webview_flutter: ^2.0.12
 
 dev_dependencies:
   flutter_test:
